--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -57,7 +57,8 @@
 
 @import "./base/layout.less";
 @import "./module/image-preview.less";
-@import "./layout/search.less";
+@import "./module/dropdown-box.less";
+@import "./layout/site-header.less";
 @import "./layout/ad.less";
 @import "./layout/user.less";
 @import "./base/landing.less";
