--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -8,3 +8,12 @@
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
 @jumbotron-color: #333;
 @jumbotron-bg: transparent;
+
+@link-primary: #b00;
+@link-secondary: #888;
+
+@text-primary: #333;
+@text-secondary: #888;
+
+@border-primary: #ddd;
+@border-secondary: #ccc;
