Refactor a bit less code.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -170,6 +170,11 @@
     color: darken(@input-color-placeholder, 50%);
   }
 }
+
+.navbar-brand {
+  padding: 8px 15px 0 15px;
+}
+
 /** Hide header mobile components **/
 #mobile-create-ads-label {
   display: none;
