--- a/src/Adstacy/AppBundle/Resources/public/less/overrides.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/overrides.less
@@ -1,3 +1,11 @@
 .mce-fullscreen {
   z-index: 9999 !important;
 }
+
+.panel {
+  border: 1px solid #ccc;
+  border-bottom: 0;
+  box-shadow: 0 1px 1px #aaa;
+  margin-left: auto;
+  margin-right: auto;
+}
