--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -62,7 +62,7 @@
         </button>
       </form>
 
-      <div class="navbar-right">
+      <div class="nav navbar-nav navbar-right">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
           <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads-btn" class="btn btn-primary navbar-btn" title="{{"ads.create"|trans}}">
             <span aria-hidden="true" class="icon-plus"></span>
