--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -235,7 +235,7 @@
     display: block;
     margin-right: 0;
   }
-  #form-search {
+  #search-form {
     padding: 0;
   }
   #search-form .btn-search {
