--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -25,7 +25,7 @@
   <div id="contactus-container" class="panel panel-default">
     <div class="panel-heading">
       <h1>
-        <span aria-hidden="true" class="icon-envelope-alt"></span>
+        <i class="icon-envelope-alt"></i>
         Contact Us
       </h1>
     </div>
