Change span icon to i element.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -39,7 +39,7 @@
             </div>
           {% else %}
             <div class="btn-group btn-group-sm">
-              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote"><span class="icon-bullhorn"></span> Unpromote</a>
+              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote"><i class="icon-bullhorn"></i> Unpromote</a>
               <button type="button" class="btn btn-default promotes-count"><span class="promotes-count">{{ ad.promoteesCount }}</span></button>
             </div>
           {% endif %}
