--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -57,7 +57,7 @@
         <h1>{{"ads.no_ads.self_message"|trans}}</h1>
       <p class="lead">{{"ads.no_ads.help"|trans}}</p>
       <a href="{{ path('adstacy_app_ad_create') }}" class="btn-group btn-group-lg">
-        <span class="btn btn-success"><span class="icon-plus"></span></span>
+        <span class="btn btn-success"><i class="icon-plus"></i></span>
         <span class="btn btn-success">{{"ads.create"|trans}}</span>
       </a>
       {% else %}
