--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -3,9 +3,9 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <i class="icon-bar"></i>
+        <i class="icon-bar"></i>
+        <i class="icon-bar"></i>
       </button>
       <a class="navbar-brand" href="{{ path('homepage') }}" title="Adstacy">
         <img src="{{ asset('bundles/adstacyapp/img/logo.png') }}" alt="Adstacy">
@@ -15,14 +15,14 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <div id="site-nav-dropdown" class="btn-group navbar-btn navbar-left">
         <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-          <span class="icon-angle-down icon-angle-up"></span>
+          <i class="icon-angle-down icon-angle-up"></i>
         </button>
         <div id="site-nav-box" class="dropdown-menu">
           <nav>
             <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
-              <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><span class="icon-home"></span>&nbsp; Explore</a></li>
-              <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
-              <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
+              <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-home"></i>&nbsp; Explore</a></li>
+              <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-rss"></i>&nbsp; {{"stream"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
             </ul>
           </nav>
           <ul id="tag-list" class="dropdown-box-body list-inline list-unstyled">
@@ -49,7 +49,7 @@
           <input id="search-type" type="hidden" name="type" value="{% if isSearchUser %}users{% else %}ads{% endif %}">
           <div class="input-group-btn">
             <button id="search-type-btn" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              <span id="search-type-text">{% if isSearchUser %}Users{% else %}Ads{% endif %}</span> <span class="icon-angle-down"></span>
+              <span id="search-type-text">{% if isSearchUser %}Users{% else %}Ads{% endif %}</span> <i class="icon-angle-down"></i>
             </button>
             <ul class="dropdown-menu pull-right">
               <li><a data-val="ads">Ads</a></li>
@@ -58,14 +58,14 @@
           </div>
         </div>
         <button type="submit" class="btn-icon btn-search">
-          <span aria-hidden="true" class="icon-search"></span>
+          <i class="icon-search"></i>
         </button>
       </form>
 
       <div class="nav navbar-nav navbar-right">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
           <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads-btn" class="btn btn-primary navbar-btn" title="{{"ads.create"|trans}}">
-            <span aria-hidden="true" class="icon-plus"></span>
+            <i class="icon-plus"></i>
             <span id="mobile-create-ads-label">Create Ads</span>
           </a>
           <div id="user-nav-dropdown" class="btn-group navbar-btn">
@@ -74,9 +74,9 @@
               <span class="user-username">{{ app.user.username }}</span>
             </button>
             <ul id="user-nav" class="dropdown-menu">
-              <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
-              <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
-              <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><i class="icon-user"></i>&nbsp; {{"profile"|trans}}</a></li>
+              <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-gear"></i>&nbsp; {{"settings"|trans}}</a></li>
+              <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
             </ul>
           </div>
         {% else %}
@@ -105,14 +105,14 @@
         {% endif %}
       </div>
       <ul id="mobile-nav" class="nav navbar-nav navbar-right">
-        <li><a href="{{ path('homepage') }}" title="Home"><span class="icon-home"></span>&nbsp; Home</a></li>
-        <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
-        <li><a href="{{ path('adstacy_app_tags') }}" title="Trending"><span class="icon-bookmark"></span>&nbsp; Popular Tags</a></li>
+        <li><a href="{{ path('homepage') }}" title="Home"><i class="icon-home"></i>&nbsp; Home</a></li>
+        <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
+        <li><a href="{{ path('adstacy_app_tags') }}" title="Trending"><i class="icon-bookmark"></i>&nbsp; Popular Tags</a></li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
-        <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
-        <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
-        <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
+        <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-rss"></i>&nbsp; {{"stream"|trans}}</a></li>
+        <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><i class="icon-user"></i>&nbsp; {{"profile"|trans}}</a></li>
+        <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-gear"></i>&nbsp; {{"settings"|trans}}</a></li>
+        <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
         {% endif %}
       </ul>
     </div>
