Fix go to setting when logged in user is not user in profile.

--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -22,7 +22,7 @@
                   <h2 class="user-info-about">
                     <span class="empty">
                       No Description About User.
-                      {% if app.user %}
+                      {% if app.user and app.user == user %}
                         Go to <a href="{{ path('fos_user_profile_edit') }}">Settings</a> to write.
                       {% endif %}
                     </span>
