drop brand font. change landing page color.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -6,7 +6,7 @@
 #main-feature {
   background-color: #fff;
   border-bottom: 1px solid @border-color;
-  margin-bottom: 20px;
+  margin: 20px auto;
 }
 
 .main-section {
@@ -103,6 +103,7 @@
 }
 
 #main-title {
+  background-color: #333;
 
   h1 {
     color: #fff;
