--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -3,55 +3,13 @@
 {% block show_content %}
   {% if paginator.getCurrentPageResults|length > 0 %}
     <div class="masonry jscroll">
-      <div class="masonry-item" id="user-profile">
-        <div class="panel panel-default">
-          <div class="clearfix">
-            <div class="profile-picture">
-              <img src="{{ profile_pic(user) }}">
-            </div>
-            <div class="user-desc">
-              <div class="user-info">
-                <h1 class="user-info-realname">
-                  <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">
-                    {{ user.realname }}
-                  </a>
-                </h1>
-                {% if user.about %}
-                  <h2 class="user-info-about">{{ user.about }}</h2>
-                {% else %}
-                  <h2 class="user-info-about">
-                    <span class="empty">
-                      No Description About User.
-                      {% if app.user and app.user == user %}
-                        Go to <a href="{{ path('fos_user_profile_edit') }}">Settings</a> to write.
-                      {% endif %}
-                    </span>
-                  </h2>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-          <div class="user-info-menu">
-            <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ adsCount }} Ads</a>
-            <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
-            <a href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
-            <div class="follow-action">
-              {% if app.user %}
-                {% if app.user != user %}
-                  {% set followed = app.user.hasFollowUser(user) %}
-                  <a class="btn btn-primary btn-follow btn-sm follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
-                  <a class="btn btn-success btn-follow btn-sm unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Following</a>
-                {% endif %}
-              {% else %}
-                <a class="btn btn-primary btn-follow btn-sm" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
-              {% endif %}
-            </div>
-          </div>
-        </div>
-      </div>
+      {{ block('profile') }}
       {{ block('ajax_content') }}
     </div>
   {% else %}
+    <div class="masonry">
+      {{ block('profile') }}
+    </div>
     <div class="jumbotron text-center">
       {% if app.user and app.user == user %}
         <h1>{{"ads.no_ads.self_message"|trans}}</h1>
@@ -75,6 +33,55 @@
     {% set params = app.request.query.all|merge({username: user.username, page: paginator.getNextPage}) %}
     <a href="{{ path(route, params )}}" class="btn btn-lg btn-default btn-block next-page">{{"more"|trans}}</a>
   {% endif %}
+{% endblock %}
+
+{% block profile %}
+  <div class="masonry-item" id="user-profile">
+    <div class="panel panel-default">
+      <div class="clearfix">
+        <div class="profile-picture">
+          <img src="{{ profile_pic(user) }}">
+        </div>
+        <div class="user-desc">
+          <div class="user-info">
+            <h1 class="user-info-realname">
+              <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">
+                {{ user.realname }}
+              </a>
+            </h1>
+            {% if user.about %}
+              <h2 class="user-info-about">{{ user.about }}</h2>
+            {% else %}
+              <h2 class="user-info-about">
+                <span class="empty">
+                  No Description About User.
+                  {% if app.user and app.user == user %}
+                    Go to <a href="{{ path('fos_user_profile_edit') }}">Settings</a> to write.
+                  {% endif %}
+                </span>
+              </h2>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      <div class="user-info-menu">
+        <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ adsCount }} Ads</a>
+        <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
+        <a href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
+        <div class="follow-action">
+          {% if app.user %}
+            {% if app.user != user %}
+              {% set followed = app.user.hasFollowUser(user) %}
+              <a class="btn btn-primary btn-follow btn-sm follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+              <a class="btn btn-success btn-follow btn-sm unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Following</a>
+            {% endif %}
+          {% else %}
+            <a class="btn btn-primary btn-follow btn-sm" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block javascripts %}
