fix navbar-expand btn.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -17,7 +17,7 @@
         <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
           <i class="icon-angle-down icon-angle-up"></i>
         </button>
-        <div id="site-nav-box" class="dropdown-menu">
+        <div id="site-nav-box" class="dropdown-menu hide">
           <nav>
             <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
               <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-home"></i>&nbsp; Explore</a></li>
