--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -16,6 +16,7 @@
 
 #site-nav-box {
   width: 600px;
+  display: block;
 }
 
 #site-nav {
@@ -139,7 +140,9 @@
 
   .icon-angle-down {
     position: absolute;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 32px;
+    top: 0;
     right: 10px;
   }
 
