scale down icon size and change landing page text.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -53,48 +53,48 @@
         <span class="icon-ads"></span>
       </div>
       <div class="main-content">
-        <h1>{{"landing.features.ad.heading"|trans}}</h1>
-        <p class="lead">{{"landing.features.ad.desc"|trans}}</p>
+        <h1>Easy</h1>
+        <p class="lead">Just with a picture and short description, your ad is ready to go</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
-        <span class="icon-promote"></span>
+        <span class="icon-bullhorn"></span>
       </div>
       <div class="main-content">
-        <h1>{{"landing.features.social.heading"|trans}}</h1>
-        <p class="lead">{{"landing.features.social.desc"|trans}}</p>
-      </div>
-    </section><section class="main-section">
-      <div class="main-pic">
-        <span class="icon-hash"></span>
-      </div>
-      <div class="main-content">
-        <h1>{{"landing.features.hashtag.heading"|trans}}</h1>
-        <p class="lead">{{"landing.features.hashtag.desc"|trans}}</p>
-      </div>
-    </section><section class="main-section">
-      <div class="main-pic">
-        <span class="icon-search"></span>
-      </div>
-      <div class="main-content">
-        <h1>{{"landing.features.search.heading"|trans}}</h1>
-        <p class="lead">{{"landing.features.search.desc"|trans}}</p>
+        <h1>Social &amp; Fun</h1>
+        <p class="lead">Promote any ads you like to share it to your followers</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
         <span class="icon-hash"></span>
       </div>
       <div class="main-content">
-        <h1>{{"landing.features.hashtag.heading"|trans}}</h1>
-        <p class="lead">{{"landing.features.hashtag.desc"|trans}}</p>
+        <h1>Search</h1>
+        <p class="lead">Find any products, events, jobs, vacancies and many more stuffs</p>
       </div>
     </section><section class="main-section">
       <div class="main-pic">
         <span class="icon-search"></span>
       </div>
       <div class="main-content">
-        <h1>{{"landing.features.search.heading"|trans}}</h1>
-        <p class="lead">{{"landing.features.search.desc"|trans}}</p>
+        <h1>Hashtag</h1>
+        <p class="lead">Creatively describe your ad with hashtag to reach your potensial market</p>
+      </div>
+    </section><section class="main-section">
+      <div class="main-pic">
+        <span class="icon-hash"></span>
+      </div>
+      <div class="main-content">
+        <h1>Free</h1>
+        <p class="lead">Pay Nothing to promote your ad with us</p>
+      </div>
+    </section><section class="main-section">
+      <div class="main-pic">
+        <span class="icon-search"></span>
+      </div>
+      <div class="main-content">
+        <h1>Fast<h1>
+        <p class="lead">Fast as you want</p>
       </div>
     </section>
     <!-- end inline-block -->
