--- a/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/landing.less
@@ -28,27 +28,27 @@
 
   h1 {
     font-size: 30px;
-    color: @brand-primary;
+    color: @gray-dark;
     text-align: center;
   }
 
   .lead {
     font-size: 18px;
-    color: @gray;
+    color: #777;
   }
 
   .main-pic {
     .img-responsive();
     background-color: @brand-primary;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     margin: auto;
     text-align: center;
 
     span[class^="icon"] {
-      font-size: 50px;
-      line-height: 100px;
+      font-size: 32px;
+      line-height: 80px;
       color: #fff;
     }
   }
