--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -178,6 +178,10 @@
   padding: 8px 15px 0 15px;
 }
 
+#create-ads-btn {
+  margin-right: 5px;
+}
+
 /** Hide header mobile components **/
 #mobile-create-ads-label {
   display: none;
