--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -207,3 +207,15 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .ad {
+    width: 100%;
+    height: 100%;
+    margin: 10px 0;
+  }
+  .pic img {
+    width: 100%;
+    height: 100%;
+  }
+}
